Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10728

CPL mouse: missing icon for cursor transparency

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell

    Description

      Open Control Panel -> Mouse, go in the "Pointer Options" tab.
      The option "Hide pointer while typing" has the same icon of the "Motion" options, probably because there was not a good icon to place.
      If an artist is reading this, perhaps it would be a good idea to replace also that icon in the "Motion" group with something easier to understand.

      Attachments

        1. mouse.png
          mouse.png
          11 kB
        2. screenshot-1.png
          screenshot-1.png
          41 kB
        3. screenshot-2.png
          screenshot-2.png
          19 kB
        4. VirtualBox_WinXP Pro_19_05_2020_15_59_08.png
          VirtualBox_WinXP Pro_19_05_2020_15_59_08.png
          128 kB

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              Carlo Bramix Carlo Bramix
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: